<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">In-Drive</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_activity_select_time_period">Select Time Period</string>
    <string name="title_activity_forgot_username">ForgotUsernameActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_register_account">RegisterAccountActivity</string>
    <string name="title_activity_terms_conditions">Terms and Conditions Activity</string>
    <string name="invalid_auth_code">Invalid authorization code.  Please try again.</string>
    <string name="ValetHistoryActivity">ValetHistoryActivity</string>
    <string name="SpeedHistoryActivity">SpeedHistoryActivity</string>
    <string name="BoundaryHistoryActivity">BoundaryHistoryActivity</string>
    <string name="profile_content">profile content</string>
    <string name="remember_username">Remember Me</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_account">Register Account</string>
    <string name="login">Log In</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="user_login">User Login</string>
    <string name="account_setup">Mobile App set up</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="username_required">Username is required.</string>
    <string name="password_required">Password is required.</string>
    <string name="un_pwd_required"> Username and password fields are both required.</string>
    <string name="privacy_policy_validation">You must agree to the Privacy Policy &amp; Customer Agreement terms before you can continue setting up Mobile App.</string>
    <string name="success_response">Successful Execution</string>
    <string name="failure_response">Failed Execution</string>
    <string name="vehicle_does_not_exists">Vehicle does not exist</string>
    <string name="last_name_required">Last Name is required.</string>
    <string name="old_password_required">Old Password is required.</string>
    <string name="new_password_required">New Password is required.</string>
    <string name="vin_serial_required">VIN or Serial Number is required.</string>
    <string name="vin_required">VIN is required.</string>
    <string name="serial_no_validation">Serial Number is incorrect. Please update serial number.</string>
    <string name="vin_validation">VIN must be between 6 and 17 alpha numeric characters.</string>
    <string name="username_validation">Username must be a minimum of 6 characters and maximum of 20 characters. Cannot contain special characters.</string>
    <string name="password_validation">Password must be a minimum of 10 characters. Password must consist of one upper case letter, one lower case letter, and one number. Special characters are not allowed. Please make password secure as possible.</string>
    <string name="pwd_confirm_validation">New Password and Confirmed Password must match. Please enter again.</string>
    <string name="authorization_sent">Your authorization code has been sent.</string>
    <string name="authorization_sent_infoText">Your authorization code has been sent. Please check your email. You will need this code for the next step.</string>
    <string name="authorization_code_required">Authorization Code is required.</string>
    <string name="confirmation_password_required">Confirmation password is required.</string>
    <string name="email_required"> Email is required.</string>
    <string name="text_required">Phone number is required</string>
    <string name="prompt_vin">VIN</string>
    <string name="continue_text">Continue</string>
    <string name="enter_vin">Enter In-Drive VIN and last name to receive username</string>
    <string name="last_name">Last name</string>
    <string name="select_method">Select method to receive your username</string>
    <string name="submit">Submit</string>
    <string name="username_sent">Your username has been sent</string>
    <string name="go_back_login">Go back to login</string>
    <string name="enter_username">Please enter your username</string>
    <string name="select_method_pwd">Select method to receive your password authorization code</string>
    <string name="enter_authorization_code">Enter authorization code and new password</string>
    <string name="authorization_code">Authorization code</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_updated">Your password has been updated</string>
    <string name="login_text">Login</string>
    <string name="account_text">Account#:</string>
    <string name="vehicle_desc">Vehicle Description</string>
    <string name="enter_vin_last_name">Enter your last name and In-Drive&#174; device serial number or your VIN</string>
    <string name="and_text">--and--</string>
    <string name="serial_number">Serial Number</string>
    <string name="what_is_this">what\'s this?</string>
    <string name="or_text">--or--</string>
    <string name="select_method_account">Select method to receive your authorization code</string>
    <string name="choose_un_pwd">Choose your username and password</string>
    <string name="account_created">Your mobile account has been set up</string>
    <string name="account_setup_text">text (must be mobile number)</string>
    <string name="account_setup_email">email</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="privacy_policy">Privacy Policy and \nCustomer Agreement</string>
    <string name="privacy_policy_conditions">By checking the box you are  stating that you have read and understand the Privacy Policy and Customer agreement… FPO Copy</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="customer_agreement_text">Customer Agreement</string>
    <string name="new_device_login">Your new mobile device must be paired in order to access your mobile account.</string>
    <string name="continue_txt">Continue</string>
    <string name="select_method_pairing">Select method to receive authorization code to pair your device.</string>
    <string name="enter_code_pairing">Enter your mobile device authorization code.</string>
    <string name="auth_code_prompt">8-digit numeric code</string>
    <string name="new_device_updated">Your new mobile device \nhas been updated.</string>
    <string name="device_registration">Device Registration</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="on_off">off/on</string>
    <string name="set_radius">Set Radius</string>
    <string name="alert_type">Alert Type</string>
    <string name="alert_type_detail">Email &amp; Text</string>
    <string name="additional_contacts">Additional Contacts</string>
    <string name="additional_contacts_details">xxx.xxx.xxxx</string>
    <string name="receive_recall_alerts">Receive Recall Alerts</string>
    <string name="alert_history">ALERT HISTORY</string>
    <string name="alert_settings">ALERT SETTINGS</string>
    <string name="view_all">View All</string>
    <string name="diagnostics_summary">Diagnostic Summary</string>
    <string name="maintenance_log">Add Log</string>
    <string name="maintenance_reminders">Add Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="drop_button_geofence">Drop</string>
    <string name="draw_button_geofence">Draw</string>
    <string name="empty_reminder_text">Create a reminder that notifies you when your vehicle is due for routine maintenance. </string>
    <string name="empty_log_text">Create a maintenance log to keep tabs on your vehicle’s maintenance history.</string>
    <string name="date">Date</string>
    <string name="mileage_interval">Mileage Interval</string>
    <string name="day_month">Day/Month</string>
    <string name="dummy_date">9/18</string>
    <string name="dummy_no">5</string>
    <string name="dummy_time">12:00 pm</string>
    <string name="dummy_cost">$ 00.00</string>
    <string name="edit_location_alert">Edit Location Alert</string>
    <string name="alert_name">Custom Name</string>
    <string name="custom_reminder_name">Custom Reminder Name</string>
    <string name="alert_desc">Description</string>
    <string name="maintenance_prompt">Type of Service</string>
    <string name="current_recalls">Current Recalls</string>
    <string name="cost">Cost</string>
    <string name="mileage">Mileage</string>
    <string name="accept_changes">Accept Changes</string>
    <string name="create_log_entry">Add Log</string>
    <string name="create_alert_entry">Add Reminder</string>
    <string name="service_selection">Service Types</string>
    <string name="edit_log_entry">Edit Log</string>
    <string name="edit_alert_entry">Edit Reminder</string>
    <string name="delete_maintenance_log">Delete Entry</string>
    <string name="delete_maintenance_log_header">Delete Log</string>
    <string name="delete_maintenance_reminder_header">Delete Reminder</string>
    <string name="locate_vehicle">Locate Vehicle</string>
    <string name="location_history">Location History</string>
    <string name="no_location_history">No location history has been recorded. </string>
    <string name="alert_settings_error">The system can not retrieve your information at this time. Please check back later.</string>
    <string name="location_alert">Location Alert</string>
    <string name="add_location_alert">Add Location Alert</string>
    <string name="next">Next</string>
    <string name="name_location_alert">Name of Location Alert</string>
    <string name="location_schedule">Set Location Schedule</string>
    <string name="get_directions">Get Directions</string>
    <string name="edit_day">Edit Day</string>
    <string name="total_miles_btn">Total Miles \n 573 Mi</string>
    <string name="max_speed_btn">Max speed \n 74 mph</string>
    <string name="ave_trip">Average Trip \n 388 Mi</string>
    <string name="cost_fuel">Cost of fuel \n $82</string>
    <string name="city_mpg">City MPG \n 21 mpg</string>
    <string name="highway_mpg">Highway MPG \n 23 mpg</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="enter_address">Enter Address</string>
    <string name="use_current_location"> Use Current Location</string>
    <string name="radius">Radius</string>
    <string name="battery">Battery</string>
    <string name="manage_automated_alerts">Manage your automated alerts</string>
    <string name="draw">Draw</string>
    <string name="scan">Scan</string>
    <string name="service_required">Service Required</string>
    <string name="alert_settings_small">Alert Settings</string>
    <string name="diagnostic_summary">Blurb on the function of the battery and what can happen when there is a malfunction identified.</string>
    <string name="call_centre_summary">Currently, this service is not activated.\nDiagnostic Trouble Codes (DTCs) help you identify specific vehicle problems – without having to pay a mechanic to diagnose them.\nTo receive DTCs, select Premium Services from side menu and subscribe to In-Drive Guardian.</string>
    <string name="dtc_code">DTC-CODE :</string>
    <string name="not_activated">[Service Not Enabled]</string>
    <string name="red_alert_cd">Red Alert</string>
    <string name="info_img_cd">Info Image</string>
    <string name="scan_serial_cd">Scan Serial Number</string>
    <string name="scan_vin_cd">Scan Vin</string>
</resources>