<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:id="@+id/btnSave"
            tools:ignore="ButtonStyle"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:id="@+id/btnSettings"
            tools:ignore="ButtonStyle"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            tools:ignore="ButtonOrder,ButtonStyle"/>

    </LinearLayout>

    <FrameLayout
        android:layout_above="@id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loc_boundaries_map"
        >

        <fragment
            android:id="@+id/location_boundary_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.MapFragment"
            android:scaleType="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/use_current_location"

                />

            </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:gravity="center">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radius"
                android:id="@+id/btnRadius"
                tools:ignore="ButtonStyle"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/draw"
                android:id="@+id/btnDraw"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>